# coreqml

./: .clang-format  CMakeLists.txt  README.md  design.drawio
coreqml/: CApplication.cpp  CApplication.h  CApplicationWindow.cpp  CApplicationWindow.h  CButtonsDialog.cpp  CButtonsDialog.h  CDialog.cpp  CDialog.h  CDialogManager.cpp  CDialogManager.h  CLocalizationManager.cpp  CLocalizationManager.h  CMakeLists.txt  CPaletteManager.cpp  CPaletteManager.h  CResourcesManager.cpp  CResourcesManager.h  CScreen.cpp  CScreen.h  StackController.cpp  StackController.h  ViewController.cpp  ViewController.h  ViewControllerFactory.cpp  ViewControllerFactory.h
coreqml/QML/: AppScreen.qml  Application.qml  ApplicationWindow.qml  Button.qml  ButtonPalette.qml  ButtonPaletteData.qml  ButtonPaletteSelector.qml  ButtonsDialogController.qml  Core.qrc  CoreStyle.qml  DialogController.qml  DialogManager.qml  DialogView.qml  NavigationBar.qml  Palette.qml  PaletteManager.qml  Stack.qml  Utils.js  View.qml
example/: Application.cpp  Application.h  ApplicationWindow.cpp  ApplicationWindow.h  CMakeLists.txt  GameViewController.cpp  GameViewController.h  SplashViewController.cpp  SplashViewController.h  main.cpp
example/QML/: ButtonsDialog.qml  ExampleStyle.qml  ExampleWindow.qml  GameView.qml  MainView.qml  PaletteDark.qml  PaletteLight.qml  SplashView.qml  XKCDView.qml  example.qrc
